themes/twentytwentyfour/assets/css/style.css
/* ... */
.language-picker {
    align-items: center;
    border: 1px solid gray;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin: 0 8px;
    padding: 0 8px
}

.language-picker .language-tab {
    border-radius: 4px;
    padding: 2px 8px
}

.language-picker .language-tab span {
    color: #fff
}

.language-picker .language-tab.active {
    background-color: #fff
}

.language-picker .language-tab.active span {
    color: #000
}

.admin-logo {
    left: 32px;
    position: fixed;
    top: 32px
}

.file-delete {
    background-color: red;
    border-radius: 8px;
    height: 16px;
    position: relative;
    transition: all .3s ease-out .3s;
    width: 16px;
    z-index: 99
}

.file-delete:after,
.file-delete:before {
    background-color: #fff;
    content: "";
    height: 2px;
    left: 3px;
    position: absolute;
    top: 7px;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
    width: 10px
}

.file-delete:after {
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg)
}

.upload-error {
    background-color: red;
    border-radius: 10px;
    height: 20px;
    position: relative;
    width: 20px
}

.upload-error:after {
    color: #fff;
    content: "!";
    left: 7px;
    position: absolute
}

.progress-bar {
    border-radius: 10px;
    height: 18px;
    position: relative;
    width: 100px
}

.progress-bar div {
    background: linear-gradient(90deg, #12c2e9, #c471ed, #f64f59);
    border-radius: 10px;
    color: var(--white);
    font-size: 12px;
    height: 18px;
    padding: 2px;
    position: absolute;
    text-align: center;
    width: var(--p)
}

.analytics {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%
}

.analytics .analytics-box {
    border: 1px solid hsla(0, 0%, 100%, .067);
    display: flex;
    margin-bottom: 4px;
    min-width: 34px;
    padding: 4px
}

.analytics .analytics-box p {
    text-align: center;
    -webkit-user-select: none;
    user-select: none
}

.analytics .date-box:hover {
    background-color: #000
}

.fl-table {
    border: none;
    border-collapse: collapse;
    border-radius: 5px;
    font-size: 12px;
    font-weight: 400;
    max-width: 100%;
    white-space: nowrap;
    width: 100%
}

.fl-table td,
.fl-table th {
    padding: 8px;
    text-align: center
}

.fl-table td {
    border-right: 1px solid #000;
    font-size: 12px
}

.fl-table thead th {
    background: #82c3af;
    color: #fff
}

.fl-table thead th:nth-child(odd) {
    color: #fff
}

.fl-table tr:nth-child(2n) {
    background: #636363
}

:root {
    --navy-green: #004d35;
    --blend-a: #f9f3df;
    --blend-b: #c1f8cf;
    --blend-c: #4fd3c4;
    --dark-blend-a: #03a65a;
    --dark-blend-b: #488fb1;
    --dark-blend-c: #533e85;
    --bright-green: #00ffaf;
    --light-green: #d4ffef;
    --navy-blue: #0100e4;
    --bright-blue: #004ce1;
    --light-blue: #85d2fe;
    --soft-blue: #eaf5f9;
    --midnight-blue: #0a0d29;
    --grey-blue: #0a2129;
    --just-grey: #333;
    --light-grey: #afbcba;
    --yellow: #f9d401;
    --orange: #e47447;
    --white: #fff;
    --black: #000;
    --smoothy: smooth;
    --font: "Commissioner", sans-serif;
    --x: 0px;
    --y: 0px;
    --offset: 0px;
    --p: 0px
}

body {
    max-width: 100%;
    min-height: 100%
}

@media (-webkit-device-pixel-ratio:1.25) {

    footer,
    header,
    section {
        zoom: .8
    }
}

body,
html,
main {
    overscroll-behavior-x: none
}

.animated-link .title {
    display: inline-block;
    overflow-y: hidden;
    padding-right: 4px
}

.animated-link .title span {
    color: transparent;
    display: inline-block;
    padding-right: 12px;
    position: relative;
    transition: -webkit-transform 1.2s cubic-bezier(.19, 1, .22, 1);
    transition: transform 1.2s cubic-bezier(.19, 1, .22, 1);
    transition: transform 1.2s cubic-bezier(.19, 1, .22, 1), -webkit-transform 1.2s cubic-bezier(.19, 1, .22, 1);
    width: -webkit-max-content;
    width: max-content
}

.animated-link .title span:after,
.animated-link .title span:before {
    content: attr(data-text);
    display: block;
    padding-right: 12px;
    position: absolute;
    width: -webkit-max-content;
    width: max-content
}

.animated-link .title span:before {
    color: #004d35;
    top: 0;
    -webkit-transform: skewY(0);
    transform: skewY(0);
    -webkit-transform-origin: right bottom;
    transform-origin: right bottom
}

.animated-link .title span:after,
.animated-link .title span:before {
    transition: -webkit-transform 2s cubic-bezier(.19, 1, .22, 1);
    transition: transform 2s cubic-bezier(.19, 1, .22, 1);
    transition: transform 2s cubic-bezier(.19, 1, .22, 1), -webkit-transform 2s cubic-bezier(.19, 1, .22, 1)
}

.animated-link .title span:after {
    top: 105%;
    -webkit-transform: skewY(7deg);
    transform: skewY(7deg);
    -webkit-transform-origin: left top;
    transform-origin: left top
}

.animated-link .title:hover span {
    -webkit-transform: translateY(-105%);
    transform: translateY(-105%)
}

.animated-link .title:hover span:before {
    -webkit-transform: skewY(7deg);
    transform: skewY(7deg)
}

.animated-link .title:hover span:after {
    -webkit-transform: skewY(0);
    transform: skewY(0)
}

.m0 {
    margin: 0
}

.m2 {
    margin: 2px
}

.m4 {
    margin: 4px
}

.m6 {
    margin: 6px
}

.m8 {
    margin: 8px
}

.m12 {
    margin: 12px
}

.m16 {
    margin: 16px
}

.m24 {
    margin: 24px
}

.m32 {
    margin: 32px
}

.mb0 {
    margin-bottom: 0
}

.mb2 {
    margin-bottom: 2px
}

.mb4 {
    margin-bottom: 4px
}

.mb6 {
    margin-bottom: 6px
}

.mb8 {
    margin-bottom: 8px
}

.mb12 {
    margin-bottom: 12px
}

.mb16 {
    margin-bottom: 16px
}

.mb24 {
    margin-bottom: 24px
}

.mb32 {
    margin-bottom: 32px
}

.ml0 {
    margin-left: 0
}

.ml2 {
    margin-left: 2px
}

.ml4 {
    margin-left: 4px
}

.ml6 {
    margin-left: 6px
}

.ml8 {
    margin-left: 8px
}
/* ... */

